--- a/src/components/MainWeatherCard.modules.css
+++ b/src/components/MainWeatherCard.modules.css
@@ -1,20 +1,34 @@
-.main-container{
+.divTable{
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 5%;
+	display: table;
+	width: 75%;
     background-color: #464c58;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-top: 25px;
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-    border-radius: 10px;    
+    border-radius: 10px;
 }
-.container-header{
-    margin-left: 2%;
+.divTableRow {
+	display: table-row;
 }
-.container-right{
-    margin: auto;
-    display: flex;
-    margin-right: 0%;
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
 }
-.container-middle{
-
+.divTableCell, .divTableHead {
+	display: table-cell;
+}
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
+	font-weight: bold;
+}
+.divTableFoot {
+	background-color: #EEE;
+	display: table-footer-group;
+	font-weight: bold;
+}
+.divTableBody {
+	display: table-row-group;
 }
